--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# code kept here for ease of use
+/old calc
+
 # dependencies
 /node_modules
 /.pnp
